--- a/templates/weather.html
+++ b/templates/weather.html
@@ -14,6 +14,9 @@
     </div>
     <div>
         {{ address }}
+        {{ web_temps }}
+        {{ web_times }}
+        {{ web_precips }}
     </div>
 {% endblock %}
 
