Added chart.js to weather.html

--- a/templates/weather.html
+++ b/templates/weather.html
@@ -13,9 +13,42 @@
         </form>
     </div>
     <div>
-        {{ address }}
-        {{ web_temps }}
-        {{ web_times }}
+        <canvas id="myChart"></canvas>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    
+    <script>
+        const ctx = document.getElementById('myChart');
+
+        Chart.defaults.backgroundColor = '#9BD0F5';
+        Chart.defaults.borderColor = '#36A2EB';
+        Chart.defaults.color = '#000';
+        
+        new Chart(ctx, {
+            type: 'line',
+            data: {
+                labels: {{ web_times | tojson | safe }},
+                datasets: [{
+                    label: 'Hourly Temperatures',
+                    data: {{ web_temps | tojson | safe }},
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                scales: {
+                    y: {
+                    beginAtZero: true
+                    }
+                }
+            }
+        });
+    
+    </script>
+    <div>
+        {{ address }} <br>
+        {{ web_temps }} <br>
+        {{ web_times }} <br>
         {{ web_precips }}
     </div>
 {% endblock %}
