--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,10 +6,12 @@
     <link href="/static/styles.css" rel="stylesheet">
     <title>
         {% block title %}
+        LowTemp
         {% endblock %}
     </title>
 </head>
 <body>
+    <h2>LowTemp</h2>
     {% block main %}
     {% endblock %}
 </body>
