--- a/templates/weather.html
+++ b/templates/weather.html
@@ -46,7 +46,8 @@
                 maintainAspectRatio: false,
                 scales: {
                     y: {
-                    beginAtZero: true
+                    beginAtZero: true,
+                    max: 100
                     }
                 }
             }
